--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,11 @@ body {
     display: flex;
     flex-direction: column;
     background: linear-gradient(135deg, #f0f4f8 0%, #d9e2ec 100%);
+    /* background-color: #C9DBF6; */
+    /* background-image: url('../../static/images/content-bg2.webp');
+            background-size: cover;
+            background-position: center;
+            background-repeat: repeat; */
 }
 .sidebar {
     min-height: 100vh;
